# ai-desktop-pet

./: .gitignore  CHANGELOG.md  config_vtuber.yaml  main.py  make_assets.bat  make_assets.py  oc.py  pyproject.toml  readme.md  requirements.txt  vtuber_main.py
oc_desktop_pet/: __init__.py
oc_desktop_pet/animation/: __init__.py  sprite_loader.py
oc_desktop_pet/chat/: __init__.py  api_client.py  memory.py  nanobot_bridge.py  prompt_builder.py
oc_desktop_pet/emotions/: __init__.py  affinity.py  economy.py  mood.py
oc_desktop_pet/features/: __init__.py  bio_workflow.py  doc_hub.py  meeting_tracker.py  paper_assistant.py  task_board.py
oc_desktop_pet/monitors/: __init__.py
oc_desktop_pet/perception/: __init__.py  feishu_bridge.py
oc_desktop_pet/persistence/: __init__.py  defaults.py  paths.py  secure_config.py  store.py
oc_desktop_pet/utils/: __init__.py  logger.py
oc_desktop_pet/vtuber/: __init__.py  bilibili_client.py  config.py  danmaku_handler.py
