[project]
name = "ai-desktop-pet"
version = "1.0.0"
description = "AI 桌面宠物，具备情感系统、记忆、TTS 语音和 Bilibili VTuber 功能"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "RomanCohort"}]
keywords = ["desktop-pet", "ai", "vtuber", "tts", "emotion", "bilibili"]

dependencies = [
    "requests>=2.31",
    "pillow>=10.2",
    "pyttsx3>=2.90",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "flask>=3.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
vtuber = ["websockets>=12.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oc_desktop_pet*"]
